modules/vpc/main.tf
locals {

  nat_gateway_count = var.single_nat_gateway ? 1 : length(var.zones)


}

######
# VPC
######
resource "aws_vpc" "this" {  

  cidr_block                       = var.cidr  
  enable_dns_hostnames             = var.enable_dns_hostnames
  enable_dns_support               = var.enable_dns_support
  

  tags = merge(
    {
      "Name" = format("%s", var.name)
    },
    var.tags,    
  )
}
#####
# Default route
#####
resource "aws_default_route_table" "default" {
  default_route_table_id = aws_vpc.this.default_route_table_id  
  
  tags = merge(
    { "Name" = var.name },
    var.tags,
    { "DefaultRouteTable" = true }
  )

}

#####
# Public route
#####
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  tags = merge(
    {
      "Name" = format("%s-${var.public_subnet_suffix}", var.name)
    },
    var.tags,
    { "PublicRouteTable" = true }
  )
}

resource "aws_route" "public_internet_gateway" {  

  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.this.id

  timeouts {
    create = "5m"
  }
}

#####
# Private route
#####
resource "aws_route_table" "private" {
  count = local.nat_gateway_count

  vpc_id = aws_vpc.this.id

  tags = merge(
    {
      "Name" = var.single_nat_gateway ? "${var.name}-${var.private_subnet_suffix}" : format(
        "%s-${var.private_subnet_suffix}-%s",
        var.name,
        element(var.zones, count.index),
      )
    },
    var.tags,    
  )
}


#####
# Public subnet
#####
resource "aws_subnet" "public" {
  count = length(var.public_subnets)

  vpc_id                          = aws_vpc.this.id
  cidr_block                      = element(var.public_subnets, count.index)
  availability_zone               = element(var.zones, count.index)  
  
  tags = merge(
    {
      "Name" = format(
        "%s-${var.public_subnet_suffix}-%s",
        var.name,
        element(var.zones, count.index),
      )
    },
    var.tags,    
  )
}

#####
# Private subnet
#####
resource "aws_subnet" "private" {
  count = length(var.private_subnets)

  vpc_id                          = aws_vpc.this.id
  cidr_block                      = var.private_subnets[count.index]
  availability_zone               = var.zones[count.index]  
  
  tags = merge(
    {
      "Name" = format(
        "%s-${var.private_subnet_suffix}-%s",
        var.name,
        element(var.zones, count.index),
      )
    },
    var.tags,    
  )
}

####
# Internet Gateway
####
resource "aws_internet_gateway" "this" {  

  vpc_id = aws_vpc.this.id

  tags = merge(
    {
      "Name" = format("%s", var.name)
    },
    var.tags
  )
}

#####
# Nat Gateway
#####
locals {
  nat_gateway_ips = var.reuse_nat_ips ? var.external_nat_ip_ids : aws_eip.nat.*.id
}


resource "aws_eip" "nat" {
  count = var.enable_nat_gateway && var.reuse_nat_ips == false ? local.nat_gateway_count : 0

  vpc = true

  tags = merge(
    {
      "Name" = format(
        "%s-%s",
        var.name,
        element(var.zones, var.single_nat_gateway ? 0 : count.index),
      )
    },
    var.tags,    
  )
}

resource "aws_nat_gateway" "this" {
  count = var.enable_nat_gateway ? local.nat_gateway_count : 0

  allocation_id = element(
    local.nat_gateway_ips,
    var.single_nat_gateway ? 0 : count.index,
  )
  subnet_id = element(
    aws_subnet.public.*.id,
    var.single_nat_gateway ? 0 : count.index,
  )

  tags = merge(
    {
      "Name" = format(
        "%s-%s",
        var.name,
        element(var.zones, var.single_nat_gateway ? 0 : count.index),
      )
    },
    var.tags,    
  )

  depends_on = [aws_internet_gateway.this]
}

resource "aws_route" "private_nat_gateway" {
  count = var.enable_nat_gateway ? local.nat_gateway_count : 0

  route_table_id         = element(aws_route_table.private.*.id, count.index)
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = element(aws_nat_gateway.this.*.id, count.index)

  timeouts {
    create = "5m"
  }
}

##########################
# Route table association
##########################

resource "aws_route_table_association" "public" {
  count = length(var.public_subnets) > 0 ? length(var.public_subnets) : 0
  subnet_id      = element(aws_subnet.public.*.id, count.index)
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  count = length(var.private_subnets) > 0 ? length(var.private_subnets) : 0

  subnet_id = element(aws_subnet.private.*.id, count.index)
  route_table_id = element(
    aws_route_table.private.*.id,
    var.single_nat_gateway ? 0 : count.index,
  )
}
